# compiler-stuff

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README  README.md
docs/: flow.txt  how_llvm_works.txt  ir_syntax.txt  llvm.txt  llvm_ir_syntax.txt  next.txt  next_steps.txt  references.txt  repo.txt  roadmap.txt  textbooks.txt
examples/CProg/: fact.c
examples/basics/: manual.ll  run.sh  source.c
examples/cross-language-linking/: build.sh  integration_guide.txt  logic.rs  main.c  math_lib.c
examples/frontend/: ast_demo.c  dump_ast.sh
examples/inline-asm/: asm.ll
examples/intrinsics/: intrinsics.ll
examples/linking-lto/: main.c  run_lto.sh
examples/metadata/: debug_me.c
examples/mixed-languages/: Example.java  example.cpp  example.py  example.rs  example_rust.ll  run_mixed.sh
examples/passes/: CMakeLists.txt  HelloPass.cpp
examples/polyglot/: example.rs  run_rust.sh
examples/structs/: structs.ll
examples/tablegen/: run_tblgen.sh
irs/: add.cpp  branch.cpp  compare.ll  factorial.ll  fund.ll  hello.cpp  hello.ll  prac  prac.ll  prac.s  sumArr.ll
llvm-irs/: prac.c
llvm-irs/CProg/: fact  fact.ll
llvm-irs/basics/: optimized.ll  source.c  source.ll
llvm-irs/control-flow/: loop.ll
llvm-irs/cross-language-linking/: logic.rs
llvm-irs/linking-lto/: library.c  linked.ll
llvm-irs/metadata/: debug_me.c  debug_me.ll  generate_debug.sh
llvm-irs/mixed-languages/: example.c  example_c.ll  example_cpp.ll
llvm-irs/polyglot/: example.ll  languages.txt
llvm-irs/sanitizers/: buggy.c  run_asan.sh
papers/: DETAILS  README
(+2 files in other folders)
